--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,9 @@ else()
   include_directories( ${OpenCV_INCLUDE_DIRS} )
 endif()
 
+set(CMAKE_CXX_STANDARD 11)
+set(CXX_STANDARD_REQUIRED)
+
 #########################
 # FOR LEARNING OPENCV 3 #
 #########################
